# EGX-Analyser

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  egx-intelligence-api.spec  pyproject.toml
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_raw_ai_response.py  0003_add_recommendation_entry_ranges.py
app/: __init__.py  analysis_filter.py  analysis_trace.py  analysis_validation.py  api.py  config.py  config_store.py  content_pack_public_key.txt  content_updates.py  database.py  diagnostics.py  engine_updates.py  entry_points.py  main.py  models.py  recommendation_notes.py  reports.py  repositories.py  runtime.py  schemas.py  services.py  stock_catalog.py  telegram_auth.py  time_utils.py
app/ai/: __init__.py  service.py
app/ai/prompts/: recommendation.md
app/collector/: __init__.py  telegram.py
app/dashboard/: app.py
app/scheduler/: __init__.py  tasks.py
desktop/: index.html  package-lock.json  package.json  sidecar_server.py
desktop/src/: App.tsx  api.ts  styles.css  time.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  DESKTOP.md  UPDATES.md
remote-content/: content-pack.json
remote-content/source/: recommendation.md  stock_aliases.json
remote-engine/: engine-pack.json
scripts/: bootstrap-windows.ps1  build-desktop.ps1  build-release.ps1  content_pack.py  enable-updater.ps1  engine_pack.py  generate_desktop_icon.py  new-update-manifest.ps1  publish-content-pack.ps1  publish-engine-pack.ps1
tests/: test_services.py  test_time_utils.py
