[project]
name = "egx-stock-intelligence"
version = "0.1.4"
description = "Multimodal Egyptian stock-market intelligence platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14", "asyncpg>=0.30", "psycopg[binary]>=3.2", "celery[redis]>=5.4", "fastapi>=0.115",
  "httpx>=0.28", "openai>=1.60", "pgvector>=0.3", "pydantic-settings>=2.7",
  "python-multipart>=0.0.20", "reportlab>=4.2", "pandas>=2.2", "sqlalchemy[asyncio]>=2.0",
  "streamlit>=1.41", "structlog>=24.4", "telethon>=1.38", "uvicorn[standard]>=0.34"
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["aiosqlite>=0.20", "pillow>=11.0", "pyinstaller>=6.11", "pytest>=8.3", "pytest-asyncio>=0.25", "ruff>=0.9"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
