[package]
name = "egx-intelligence"
version = "0.1.7"
description = "Egyptian stock intelligence desktop application"
authors = ["EGX Intelligence"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde_json = "1"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2"
