[package]
name = "egx-intelligence"
version = "0.1.94"
description = "Egyptian stock intelligence desktop application"
authors = ["EGX Analyzer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
serde_json = "1"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2"
